--- a/history.css
+++ b/history.css
@@ -5,7 +5,6 @@
 /* Default mobile styles */
 main {
   width: 100%;
-  background-color: red;
 }
 
 /* Tablet styles */
@@ -37,6 +36,73 @@ main {
   body {
     font-size: 26px;
   }
+}
+section {
+  display: flex;
+  flex-direction: column;
+}
+section header.decade {
+  font-size: 2rem;
+  font-weight: 900;
+  background: white;
+  align-items: center;
+  padding: 30px 0px 0px 0px;
+  gap: 15px;
+  height: 74px;
+  background: #FFFFFF;
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+}
+section header.decade::before {
+  /* Ellipse 1 */
+  box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  background: #FFFFFF;
+  border: 2px solid #C50000;
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+section .tl-card {
+  display: flex;
+  padding: 0px 10px;
+  gap: 15px;
+  font-size: 1rem;
+}
+section .tl-card .tl-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  gap: 30px;
+  border-left: 1px solid #999;
+}
+section .tl-card .tl-content .tl-text {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 50%;
+  gap: 10px;
+}
+section .tl-card .tl-content .tl-text .tl-headline {
+  display: flex;
+  flex-direction: column;
+  font-weight: bold;
+  font-size: 1.2rem;
+  line-height: 1.2;
+}
+section .tl-card .tl-content .tl-img {
+  flex: 1 1 50%;
+}
+section .tl-card .tl-content .tl-img img {
+  width: 100%;
+}
+section .tl-card .tl-content .tl-img:has(img[src=""]) {
+  display: none;
 }
 
 /*# sourceMappingURL=history.css.map */
