--- a/history.css
+++ b/history.css
@@ -42,31 +42,28 @@ section {
   flex-direction: column;
 }
 section header.decade {
+  display: flex;
   font-size: 2rem;
   font-weight: 900;
   background: white;
+  color: #0057b7;
   align-items: center;
   padding: 30px 0px 0px 0px;
   gap: 15px;
-  height: 74px;
-  background: #FFFFFF;
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 0;
+  position: sticky;
+  top: 0;
+}
+section header.decade.small {
+  font-size: 1rem;
+  padding: 0px;
 }
 section header.decade::before {
   /* Ellipse 1 */
-  box-sizing: border-box;
+  content: "";
   width: 20px;
   height: 20px;
-  background: #FFFFFF;
   border: 2px solid #C50000;
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+  border-radius: 100%;
 }
 section .tl-card {
   display: flex;
