--- a/history.scss
+++ b/history.scss
@@ -11,42 +11,6 @@ main {
     width: 100%;
 }
 
-
-/* Tablet styles */
-@media (min-width: 600px) {
-    #dpu-timeline {
-        font-size: 18px;
-    }
-}
-
-/* Tablet landscape styles */
-@media (min-width: 768px) {
-    #dpu-timeline {
-        font-size: 20px;
-    }
-}
-
-/* Small laptop styles */
-@media (min-width: 992px) {
-    #dpu-timeline {
-        font-size: 22px;
-    }
-}
-
-/* Large laptop styles */
-@media (min-width: 1200px) {
-    #dpu-timeline {
-        font-size: 24px;
-    }
-}
-
-/* Extra large screens */
-@media (min-width: 1400px) {
-    #dpu-timeline {
-        font-size: 26px;
-    }
-}
-
 nav {
     overflow:auto;
     scrollbar-width: none;
@@ -81,10 +45,12 @@ section {
         gap: 15px;
         position: sticky;
         top: 0;
+        transition: .2s all ease-in-out;
 
         &.small {
             font-size: 1rem;
             padding: 0px;
+            box-shadow: 4px 0px 0px #000000;
         }
 
         &::before {
@@ -101,10 +67,11 @@ section {
         display: flex;
         padding: 0px 10px;
         gap: 15px;
-        font-size: 1rem;
+        font-size: .8rem;
         
         .tl-content {
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             padding: 30px;
@@ -121,12 +88,13 @@ section {
                     display: flex;
                     flex-direction: column;
                     font-weight: bold;
-                    font-size: 1.2rem;
+                    font-size: 1.55rem;
                     line-height: 1.2;
                 }
             }
             .tl-img {
                 flex: 1 1 50%;
+                width: 100%;
                 img {width: 100%;}
                 &:has(img[src=""]) {
                     display: none;
@@ -134,4 +102,51 @@ section {
             }
         }
     }
+}
+
+/* Tablet styles */
+@media (min-width: 600px) {
+    #dpu-timeline {
+        font-size: 1.2rem;
+    }
+}
+
+/* Tablet landscape styles */
+@media (min-width: 768px) {
+    #dpu-timeline {
+        font-size: 20px;
+    }
+
+    section {
+        .tl-card {
+            .tl-content {
+                flex-direction: row;
+            }
+            .tl-img {
+                width: auto;
+            }
+        }
+    }
+}
+
+/* Small laptop styles */
+@media (min-width: 992px) {
+    #dpu-timeline {
+        font-size: 22px;
+    }
+}
+
+/* Large laptop styles */
+@media (min-width: 1200px) {
+    #dpu-timeline {
+        font-size: 24px;
+    }
+}
+
+/* Extra large screens */
+@media (min-width: 1400px) {
+    #dpu-timeline {
+        font-size: 26px;
+    }
+
 }
