--- a/history.css
+++ b/history.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   box-sizing: border-box;
 }
@@ -14,6 +15,8 @@ main {
 nav {
   overflow: auto;
   scrollbar-width: none;
+  margin-bottom: -1px;
+  /* fixes chrome bug */
 }
 nav .tl-nav {
   list-style: none;
@@ -41,15 +44,14 @@ section header.decade {
   color: #0057b7;
   align-items: center;
   padding: 30px 0px 0px 0px;
-  gap: 15px;
   position: sticky;
   top: 0;
   transition: 0.2s all ease-in-out;
+  transform-origin: 0;
 }
-section header.decade.small {
-  font-size: 1rem;
-  padding: 0px;
-  box-shadow: 4px 0px 0px #000000;
+section header.decade a, section header.decade a:hover, section header.decade a:visited, section header.decade a:active {
+  text-decoration: none;
+  color: inherit;
 }
 section header.decade::before {
   /* Ellipse 1 */
@@ -58,6 +60,16 @@ section header.decade::before {
   height: 20px;
   border: 2px solid #C50000;
   border-radius: 100%;
+  margin-right: 5px;
+}
+section header.decade.small {
+  font-size: 1rem;
+  padding: 10px 0;
+  box-shadow: 4px 0px 10px #000000;
+}
+section header.decade.small::after {
+  content: "⌄";
+  margin-left: 4px;
 }
 section .tl-card {
   display: flex;
@@ -70,8 +82,8 @@ section .tl-card .tl-content {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 30px;
-  gap: 30px;
+  padding: 30px 15px;
+  gap: 10px;
   border-left: 1px solid #999;
 }
 section .tl-card .tl-content .tl-text {
