--- a/history.scss
+++ b/history.scss
@@ -14,6 +14,7 @@ main {
 nav {
     overflow:auto;
     scrollbar-width: none;
+    margin-bottom: -1px; /* fixes chrome bug that makes section headers jittery after scrollTo*/
 
     .tl-nav {
         list-style: none;
@@ -42,17 +43,16 @@ section {
         color: #0057b7;
         align-items: center;
         padding: 30px 0px 0px 0px;
-        gap: 15px;
         position: sticky;
         top: 0;
         transition: .2s all ease-in-out;
+        transform-origin: 0;
 
-        &.small {
-            font-size: 1rem;
-            padding: 0px;
-            box-shadow: 4px 0px 0px #000000;
+        a, a:hover, a:visited, a:active {
+            text-decoration: none;
+            color: inherit;
         }
-
+        
         &::before {
             /* Ellipse 1 */
             content: "";
@@ -60,7 +60,20 @@ section {
             height: 20px;
             border: 2px solid #C50000;
             border-radius: 100%;
+            margin-right: 5px;
         }
+
+        &.small {
+            font-size: 1rem;
+            padding: 10px 0;
+            box-shadow: 4px 0px 10px #000000;
+            
+            &::after {
+                content:"⌄";
+                margin-left: 4px;
+            }
+        }
+        
     }
     
     .tl-card {
@@ -74,8 +87,8 @@ section {
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 30px;
-            gap: 30px;
+            padding: 30px 15px;
+            gap: 10px;
             border-left: 1px solid #999;
             
             .tl-text {
