--- a/history.css
+++ b/history.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   box-sizing: border-box;
 }
@@ -45,7 +44,7 @@ section header.decade {
   align-items: center;
   padding: 30px 0px 0px 0px;
   position: sticky;
-  top: 0;
+  top: 0px;
   transition: 0.2s all ease-in-out;
   transform-origin: 0;
 }
@@ -62,14 +61,16 @@ section header.decade::before {
   border-radius: 100%;
   margin-right: 5px;
 }
+section header.decade .chevron {
+  margin: 0 4px;
+  visibility: hidden;
+}
 section header.decade.small {
   font-size: 1rem;
   padding: 10px 0;
-  box-shadow: 4px 0px 10px #000000;
 }
-section header.decade.small::after {
-  content: "⌄";
-  margin-left: 4px;
+section header.decade.small .chevron {
+  visibility: visible;
 }
 section .tl-card {
   display: flex;
