--- a/history.scss
+++ b/history.scss
@@ -44,7 +44,7 @@ section {
         align-items: center;
         padding: 30px 0px 0px 0px;
         position: sticky;
-        top: 0;
+        top: 0px;
         transition: .2s all ease-in-out;
         transform-origin: 0;
 
@@ -63,14 +63,18 @@ section {
             margin-right: 5px;
         }
 
+        .chevron {
+            margin: 0 4px;
+            visibility: hidden;
+            // transition: .5s all ease-in-out;
+        }
+        
         &.small {
             font-size: 1rem;
             padding: 10px 0;
-            box-shadow: 4px 0px 10px #000000;
             
-            &::after {
-                content:"⌄";
-                margin-left: 4px;
+            .chevron {
+                visibility: visible;
             }
         }
         
