--- a/history.scss
+++ b/history.scss
@@ -1,3 +1,8 @@
+
+$primary-color: #0057b7;
+$secondary-color: #0e4174;
+$red: #C50000;
+
 * {
     box-sizing: border-box;
 }
@@ -16,22 +21,36 @@ nav {
     scrollbar-width: none;
     margin-bottom: -1px; /* fixes chrome bug that makes section headers jittery after scrollTo*/
 
-    .tl-nav {
-        list-style: none;
-        display: flex;
-        padding: 30px 0px;
-        gap: 15px;
-a {
-font-family: 'Proxima Nova Condensed';
-font-style: normal;
-font-weight: 700;
-font-size: 20px;
+}
 
-color: #0E4174;}
+.tl-nav {
+    list-style: none;
+    display: flex;
+    padding: 30px 0px;
+    gap: 15px;
+    
+    a {
+        font-family: 'Proxima Nova Condensed';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        color: $secondary-color;
     }
 }
 
 section {
+    .dropdown-menu {
+        box-shadow: 0px 4px 6px rgba(0,0,0,.4);
+        border: none;
+        translate: 40px;
+        .tl-nav {
+            flex-direction: column;
+            padding: 0 20px;
+            margin: 0;
+            gap: 2px;
+        }
+    }
+
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
@@ -41,16 +60,16 @@ section {
         font-size: 2rem;
         font-weight: 900;
         background: white;
-        color: #0057b7;
+        color: $primary-color;
         align-items: center;
         position: sticky;
         top: 0px;
         transition: .2s all ease-in-out;
         transform-origin: top;
 
-        a, a:hover, a:visited, a:active {
+        a, a:visited, a:active {
             text-decoration: none;
-            color: inherit;
+            color: $primary-color;
         }
         
         &::before {
@@ -58,7 +77,7 @@ section {
             content: "";
             width: 20px;
             height: 20px;
-            border: 2px solid #C50000;
+            border: 2px solid $red;
             border-radius: 100%;
             margin-right: 5px;
         }
@@ -116,6 +135,10 @@ section {
                 &:has(img[src=""]) {
                     display: none;
                  }
+                figcaption {
+                    color: #595959;
+                    font-size: .9em;
+                }
             }
         }
     }
