--- a/history.css
+++ b/history.css
@@ -59,6 +59,7 @@ section header.decade {
   top: 0px;
   transition: 0.2s all ease-in-out;
   transform-origin: top;
+  z-index: 2;
 }
 section header.decade a, section header.decade a:visited, section header.decade a:active {
   text-decoration: none;
@@ -93,6 +94,7 @@ section .tl-card {
   padding: 0px 10px;
   gap: 15px;
   font-size: 0.8rem;
+  z-index: 1;
 }
 section .tl-card .tl-content {
   display: flex;
@@ -102,6 +104,7 @@ section .tl-card .tl-content {
   padding: 30px 15px;
   gap: 10px;
   border-left: 1px solid #999;
+  width: 100%;
 }
 section .tl-card .tl-content .tl-text {
   display: flex;
@@ -117,11 +120,15 @@ section .tl-card .tl-content .tl-text .tl-headline {
   line-height: 1.2;
 }
 section .tl-card .tl-content .tl-img {
-  flex: 1 1 50%;
+  flex: 0 0 50%;
   width: 100%;
+  height: auto;
 }
-section .tl-card .tl-content .tl-img img {
+section .tl-card .tl-content .tl-img figure, section .tl-card .tl-content .tl-img img {
+  margin: 0;
+  object-fit: cover;
   width: 100%;
+  height: 100%;
 }
 section .tl-card .tl-content .tl-img:has(img[src=""]) {
   display: none;
@@ -147,7 +154,7 @@ section .tl-card .tl-content .tl-img figcaption {
     flex-direction: row;
   }
   section .tl-card .tl-img {
-    width: auto;
+    height: 400px;
   }
 }
 /* Small laptop styles */
@@ -167,6 +174,15 @@ section .tl-card .tl-content .tl-img figcaption {
   #dpu-timeline {
     font-size: 26px;
   }
+}
+.will-fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: 1s all ease-in-out;
+}
+.will-fade-in.fade-in {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 /*# sourceMappingURL=history.css.map */
