--- a/history.scss
+++ b/history.scss
@@ -116,8 +116,8 @@ section {
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 30px 15px;
-            gap: 10px;
+            padding: 45px 15px;
+            gap: 30px;
             border-left: 1px solid #999;
             width: 100%;
 
@@ -128,32 +128,37 @@ section {
             .tl-text {
                 display: flex;
                 flex-direction: column;
-                flex: 1 1 50%;
+                width: 100%;
                 gap: 10px;
                 
                 .tl-headline {
                     display: flex;
                     flex-direction: column;
                     font-weight: bold;
-                    font-size: 1.55rem;
+                    font-size: 1rem;
                     line-height: 1.2;
                 }
             }
             .tl-img {
-                flex: 0 0 50%;
+                flex: 0 1 auto;
                 width: 100%;
-                height: auto;
+                height: 400px;
 
                 figure, img {margin: 0;
-                    object-fit: cover;
+                    object-fit: contain;
                     width: 100%;
-                    height: 100%;}
+                    height: 100%;
+                    background: #eee;
+                    padding: 10px;
+                    display: flex;
+                    flex-direction: column;}
                 &:has(img[src=""]) {
                     display: none;
                  }
                 figcaption {
-                    color: #595959;
-                    font-size: .9em;
+                    color: #333;
+                    font-size: .9rem;
+                    padding: 10px;
                 }
             }
         }
@@ -177,9 +182,13 @@ section {
         .tl-card {
             .tl-content {
                 flex-direction: row;
-            }
-            .tl-img {
-                height: 400px;
+                .tl-text{flex: 1 0 50%;}
+                .tl-img {
+                    height: 500px;
+                    figure, img {
+                        // object-fit: contain;
+                    }
+                }
             }
         }
     }
