--- a/history.css
+++ b/history.css
@@ -128,25 +128,34 @@ header.decade.small a {
   flex: 0 1 auto;
   width: 100%;
   height: 400px;
+  display: flex;
 }
-.tl-card .tl-content .tl-img figure,
-.tl-card .tl-content .tl-img img {
+.tl-card .tl-content .tl-img figure {
   margin: 0;
+  background: #efefef;
+  padding: 10px;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.tl-card .tl-content .tl-img img {
   object-fit: contain;
   width: 100%;
   height: 100%;
-  background: #eee;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-}
-.tl-card .tl-content .tl-img:has(img[src=""]) {
-  display: none;
 }
 .tl-card .tl-content .tl-img figcaption {
   color: #333;
-  font-size: 0.9rem;
+  font-size: 0.9em;
   padding: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: inherit;
+  width: 100%;
+}
+.tl-card .tl-content .tl-img:has(img[src=""]) {
+  display: none;
 }
 
 /* fade animation */
