--- a/history.scss
+++ b/history.scss
@@ -126,7 +126,6 @@ header.decade {
         border-left: 1px solid #999;
         width: 100%;
 
-        &:has(img[src=""]) {}
 
         .tl-text {
             display: flex;
@@ -147,28 +146,39 @@ header.decade {
             flex: 0 1 auto;
             width: 100%;
             height: 400px;
+            display: flex;
 
-            figure,
-            img {
+            figure {
                 margin: 0;
+                background: #efefef;
+                padding: 10px;
+                flex-direction: column;
+                width: 100%;
+                height: 100%;
+                position: relative;
+            }
+
+            img {
                 object-fit: contain;
                 width: 100%;
                 height: 100%;
-                background: #eee;
+            }
+            
+            figcaption {
+                color: #333;
+                font-size: .9em;
                 padding: 10px;
-                display: flex;
-                flex-direction: column;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                background: inherit;
+                width: 100%;
             }
 
             &:has(img[src=""]) {
                 display: none;
             }
 
-            figcaption {
-                color: #333;
-                font-size: .9rem;
-                padding: 10px;
-            }
         }
     }
 }
