--- a/history.scss
+++ b/history.scss
@@ -22,6 +22,32 @@ nav {
 
 }
 
+#arrowUp {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    margin: 2%;
+    background: #fff;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .4);
+    z-index: 999999;
+    opacity: 0;
+    transition: .2s all ease-in-out;
+    display: flex;
+    align-items: center;
+    
+    &.show {
+        opacity: 1;
+    }
+
+    .chevron {
+        rotate: 180deg;
+        margin: 0 auto;
+        width: 100%;
+    }
+}
+
 .tl-nav {
     list-style: none;
     display: flex;
@@ -69,13 +95,16 @@ header.decade {
     transform-origin: top;
     z-index: 2;
 
+    &:not(.small) {
     a,
     a:visited,
     a:active {
-        text-decoration: none;
         color: $secondary-color;
         pointer-events: none;
+
+        text-decoration: none !important;}
     }
+    
 
     &::before {
         /* Ellipse 1 */
