--- a/history.scss
+++ b/history.scss
@@ -28,7 +28,6 @@ nav {
     right: 0;
     width: 50px;
     height: 50px;
-    margin: 2%;
     background: #fff;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .4);
     z-index: 999999;
@@ -36,6 +35,7 @@ nav {
     transition: .2s all ease-in-out;
     display: flex;
     align-items: center;
+    margin: 10px 10px;
     
     &.show {
         opacity: 1;
@@ -273,6 +273,9 @@ header.decade {
     #dpu-timeline {
         font-size: 24px;
     }
+    #arrowUp {
+        margin: 10px 10%;
+      }     
 }
 
 /* Extra large screens */
@@ -280,6 +283,8 @@ header.decade {
     #dpu-timeline {
         font-size: 26px;
     }
-
+    #arrowUp {
+        margin: 10px 20%;
+    }
 }
 
