--- a/history.scss
+++ b/history.scss
@@ -207,6 +207,11 @@ header.decade {
                 display: none;
             }
 
+            iframe {
+                background: #eee;
+                padding: 10px;
+            }
+
         }
     }
 }
