caption positioning, preventing visible line

--- a/history.css
+++ b/history.css
@@ -170,7 +170,7 @@ header.decade.small a {
   font-size: 0.75em;
   padding: 10px;
   position: absolute;
-  bottom: -8%;
+  bottom: -30px;
   left: 0;
   background: inherit;
   width: 100%;
